--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "clear": "rm -rf node_modules",
-    "test": "MONGO_URI=mongodb://localhost:27017 MONGO_DB=db MOCHA_FILE=./output/report.xml mocha --recursive --timeout 5000 --reporter-options outputs=true --exit tests",
-    "test-ci": "MONGO_URI=mongodb://localhost:27017 MONGO_DB=db MOCHA_FILE=./output/report.xml mocha --recursive --reporter mocha-junit-reporter --timeout 5000 --reporter-options outputs=true --exit tests"
+    "test": "mocha --recursive --timeout 5000 --reporter-options outputs=true --exit tests",
+    "test-ci": "mocha --recursive --reporter mocha-junit-reporter --timeout 5000 --reporter-options outputs=true --reporter-options mochaFile=./output/report.xml --exit tests"
   },
   "repository": {
     "type": "git",
@@ -42,8 +42,8 @@
     "mocha-junit-reporter": "^2.0.0"
   },
   "dependencies": {
+    "config": "^3.3.6",
     "csvtojson": "^2.0.10",
-    "mongodb": "^3.6.5",
-    "uuid": "^8.3.2"
+    "mongodb": "^3.6.5"
   }
 }
